<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <EditText
	        android:id="@+id/inputWordField"
	        android:layout_width="250dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/inputWordField"
	        android:selectAllOnFocus="true"
	        android:singleLine="true" />
	
	    <ImageButton
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/question"
	        android:adjustViewBounds="true"
	        android:onClick="gotoHelpActivity"
	        android:contentDescription="@string/help_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
        <Spinner
            android:id="@+id/maximum_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/words_prompt"
            android:entries="@array/words"
            android:layout_weight="1" />
        <Spinner
            android:id="@+id/minimum_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/characters_prompt"
            android:entries="@array/characters"
            android:layout_weight="1" />
	    
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="getAnagramsButtonHandler"
	        android:text="@string/getAnagramsButton" />

    </LinearLayout>
</merge>